--- a/src/main/resources/templates/fragments/home-page/hero.html
+++ b/src/main/resources/templates/fragments/home-page/hero.html
@@ -64,7 +64,7 @@
                 <div :class="shown ? 'opacity-100 scale-100' : 'opacity-0 scale-95'" class="relative transition duration-1000">
                     <div class="absolute -inset-4 bg-gradient-to-tr from-[var(--color-accent)] to-[var(--color-accent-hover)] rounded-full opacity-20 blur-2xl"></div>
                     <div class="relative">
-                        <img th:src="@{/images/self_beach.png}"
+                        <img th:src="@{/images/main_picture_me_professional.png}"
                              alt="Phi Tiet"
                              class="w-64 h-64 sm:w-80 sm:h-80 lg:w-96 lg:h-96 object-cover rounded-full shadow-xl"
                              style="ring: 4px solid var(--color-bg-card);"
