--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -40,8 +40,8 @@
     </button>
 
     <script src="https://kit.fontawesome.com/b73a5b4c7a.js" crossorigin="anonymous"></script>
-    <script th:src="@{/webjars/htmx.org/dist/htmx.min.js}" defer></script>
-    <script th:src="@{/webjars/alpinejs/dist/cdn.min.js}" defer></script>
+    <script th:src="@{/webjars/htmx.org/2.0.4/dist/htmx.min.js}" defer></script>
     <script th:src="@{/enhancements.js}" defer></script>
+    <script th:src="@{/webjars/alpinejs/3.14.8/dist/cdn.min.js}" defer></script>
 </body>
 </html>
